--- a/components/EpisodeDisplay/styles.module.css
+++ b/components/EpisodeDisplay/styles.module.css
@@ -20,3 +20,9 @@
   gap: 0.5rem;
   overflow: auto;
 }
+
+@media (max-width: 700px) {
+  .container {
+    height: 65vh;
+  }
+}
